# Alfa_test_case

./: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
Ecosystem_Alfa_TC/: .env  asgi.py  settings.py  urls.py  wsgi.py
Task1/: task_1.py
store_app/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
store_app/fixtures/: categories.json  products.json  subcategories.json
store_app/migrations/: 0001_initial.py  0002_alter_category_slug.py  0003_alter_category_image.py  0004_alter_category_image.py  0005_alter_product_slug_alter_subcategory_slug.py  0006_alter_product_image_large_alter_product_image_medium_and_more.py  0007_alter_subcategory_category.py  0008_product_subcategory.py  0009_rename_productcart_cartproduct_and_more.py  0010_alter_cartproduct_options_rename_user_id_cart_user.py  0011_alter_category_image_alter_subcategory_image.py  0012_alter_category_options.py  0013_alter_product_options.py
store_app/tests/: conftest.py  test_cart.py  test_categories.py  test_products.py
